Corrigido o link de uma imagem

--- a/_noticias/2021-03-01-pobre-13-anos.md
+++ b/_noticias/2021-03-01-pobre-13-anos.md
@@ -59,7 +59,7 @@ Por fim, eu gostaria de avisar que a minha tradução para o jogo **Ninja Gaiden
 
 OBS: Tanto a tradução para a versão protótipo do jogo quanto a tradução para a versão final/comercial do jogo receberam esta atualização.
 
-![](//img.romhackers.org/traducoes/%5BSMS%5D%20Ninja%20Gaiden%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/noticias/%5BSMS%5D%20Ninja%20Gaiden%20SMS%20-%20POBRE%20-%20Menu.png)\
+![](//img.romhackers.org/traducoes/%5BSMS%5D%20Ninja%20Gaiden%20-%20POBRE%20-%201.png) ![](//img.romhackers.org/noticias/Ninja%20Gaiden%20SMS%20-%20POBRE%20-%20Menu.png)\
 *Ninja Gaiden do sistema Master System traduzido por Mr.Fox*
 
 Seguem os links para o download das traduções:
